fixed hiding x-axis overflow

--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -7,6 +7,7 @@
   height: 100%;
   min-height: 100vh;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 #Home_main {
